--- a/pages/404.md
+++ b/pages/404.md
@@ -3,6 +3,6 @@ title: Nichts gefunden
 hidden: true
 ---
 
-## Hier scheint es nichts zu geben
+Hier scheint es nichts zu geben …
 
 <div id="not-found-link"></div>
